Atualiza com labs create

--- a/Views/Labs/Index.cshtml
+++ b/Views/Labs/Index.cshtml
@@ -6,15 +6,16 @@
 }
 
 <h1>Index</h1>
-
+@* <h2>Empresa: @ViewData["empresa"]</h2> *@
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Adicionar Novo</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.descricao)
+                @* MORANGO *@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.quantidade)
@@ -26,7 +27,7 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+    @foreach (var item in Model) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.descricao)
@@ -43,6 +44,6 @@
                 <a asp-action="Delete" asp-route-id="@item.id">Delete</a>
             </td>
         </tr>
-}
+    }
     </tbody>
 </table>
