--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - WMVCBCCT12023</title>
+    <title>@ViewData["Title"] - Sistema Gestão Laboratórios</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/WMVCBCCT12023.styles.css" asp-append-version="true" />
@@ -32,9 +32,10 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+            @* <h5> estou no miolo da página</h5> *@
             @RenderBody()
         </main>
-    </div>
+    </div> 
 
     <footer class="border-top footer text-muted">
         <div class="container">
