Atualiza 1209 - Enum Situacao Corrigido

--- a/Views/Labs/Create.cshtml
+++ b/Views/Labs/Create.cshtml
@@ -25,7 +25,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="situacao" class="control-label"></label>
-                <select asp-for="situacao" asp-items="ViewBag.bagSituacao" class="form-control">
+                <select asp-for="situacao" asp-items="ViewBag.sit" class="form-control">
                     <option selected="selected" value="">Selecione um Elemento</option>
                 </select>
                
