--- a/Views/Labs/Edit.cshtml
+++ b/Views/Labs/Edit.cshtml
@@ -1,18 +1,18 @@
 ﻿@model WMVCBCCT12023.Models.Sala
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
 
-<h4>Sala</h4>
+<h4>Editar Laboratório</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="id" />
             <div class="form-group">
                 <label asp-for="descricao" class="control-label"></label>
                 <input asp-for="descricao" class="form-control" />
@@ -25,19 +25,20 @@
             </div>
             <div class="form-group">
                 <label asp-for="situacao" class="control-label"></label>
-                @* <select asp-for="situacao" class="form-control"></select> *@
-                <select asp-for="situacao" asp-items="ViewBag.status" class="form-control"></select>
+               @*  <select asp-for="situacao" class="form-control"></select> *@
+                <select asp-for="situacao" asp-items="ViewBag.sit" class="form-control">
+               </select>
                 <span asp-validation-for="situacao" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Gravar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Página Index</a>
 </div>
 
 @section Scripts {
