--- a/Views/Labs/Index.cshtml
+++ b/Views/Labs/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Listar Labs</h1>
 @* <h2>Empresa: @ViewData["empresa"]</h2> *@
 <p>
     <a asp-action="Create">Adicionar Novo</a>
@@ -13,6 +13,9 @@
 <table class="table">
     <thead>
         <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.id)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.descricao)
                 @* MORANGO *@
@@ -30,6 +33,9 @@
     @foreach (var item in Model) {
         <tr>
             <td>
+                @Html.DisplayFor(model =>item.id)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.descricao)
             </td>
             <td>
@@ -39,9 +45,9 @@
                 @Html.DisplayFor(modelItem => item.situacao)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.id">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.id">Detalhes</a> |
+                <a asp-action="Delete" asp-route-id="@item.id">Remover</a>
             </td>
         </tr>
     }
