--- a/Views/Salas/Edit.cshtml
+++ b/Views/Salas/Edit.cshtml
@@ -26,7 +26,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="situacao" class="control-label"></label>
-                <input asp-for="situacao" class="form-control" />
+                <select asp-for="situacao" asp-items="ViewBag.status" class="form-control"></select>
                 <span asp-validation-for="situacao" class="text-danger"></span>
             </div>
             <div class="form-group">
